WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192386
DFG's StrengthReduction phase should not reduce Construct into DirectContruct when the executable does not have constructAbility.
https://bugs.webkit.org/show_bug.cgi?id=192386
Summary
DFG's StrengthReduction phase should not reduce Construct into DirectContruct...
Mark Lam
Reported
2018-12-04 15:06:08 PST
This violates an invariant documented by a RELEASE_ASSERT in operationLinkDirectCall(). <
rdar://problem/46445516
>
Attachments
proposed patch.
(2.68 KB, patch)
2018-12-04 15:16 PST
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2018-12-04 15:16:42 PST
Created
attachment 356544
[details]
proposed patch.
Mark Lam
Comment 2
2018-12-04 18:57:32 PST
Comment on
attachment 356544
[details]
proposed patch. Thanks for the review. Landing now.
WebKit Commit Bot
Comment 3
2018-12-04 19:24:01 PST
Comment on
attachment 356544
[details]
proposed patch. Clearing flags on attachment: 356544 Committed
r238884
: <
https://trac.webkit.org/changeset/238884
>
WebKit Commit Bot
Comment 4
2018-12-04 19:24:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug