DFG's StrengthReduction phase should not reduce Construct into DirectContruct when the executable does not have constructAbility. https://bugs.webkit.org/show_bug.cgi?id=192386 <rdar://problem/46445516>

Reviewed by Saam Barati.

JSTests:

* stress/regress-192386.js: Added.

Source/JavaScriptCore:

This violates an invariant documented by a RELEASE_ASSERT in operationLinkDirectCall().

* dfg/DFGStrengthReductionPhase.cpp:
(JSC::DFG::StrengthReductionPhase::handleNode):


Canonical link: https://commits.webkit.org/207018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238884 268f45cc-cd09-0410-ab3c-d52691b4dbfc